--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+* {
+  text-decoration: none !important;
+  list-style-type: none !important;
+  box-sizing: border-box !important;
+}
+body {
+  background-color: #093545;
+}
+/* 
+:root {
+  --fs_xsm: 14px;
+  --fs_sm: 16px;
+  --fs_md: 20px;
+  --fs_lg: 24px;
+  --fs_xl: 48px;
+  --fs_xxl: 64px;
+} */
+
+.ff_Montserrat {
+  font-family: "Montserrat", sans-serif;
+}
+.w_320{
+  width: 320px;
+}
+.Form_placeholder::placeholder{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400; 
+  font-style: 14px;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.my_container{
+  max-width: 1320px;
 }
